--- a/serverless-graphql/package.json
+++ b/serverless-graphql/package.json
@@ -30,7 +30,7 @@
     "source-map-support": "^0.5.12"
   },
   "devDependencies": {
-    "@stdjs/eslint-config": "^0.2.1",
+    "@stdjs/eslint-config": "^2.0.0-alpha.2",
     "@types/aws-lambda": "^8.10.23",
     "@types/aws-serverless-express": "^3.3.1",
     "@types/cors": "^2.8.6",
